...

  return (
    <ScreenGradient>
      <BouncyWrap style={bouncyStyle}>
      <Reanimated.ScrollView
        decelerationRate="fast"
        testID="screen-settings"
        ref={scrollRef}
        showsVerticalScrollIndicator={false}
        contentContainerStyle={{ paddingBottom: tabContentBottomPad, paddingTop: insets.top }}
        keyboardShouldPersistTaps="handled"
        scrollEventThrottle={16}
        bounces
...
